--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -15,9 +15,10 @@
         <hr>
     </div>
 
-    {{ form_start(form) }}
-<div class="m-3">
-    <form class="col-md-6">
+
+<div class="wrapper">
+    <form class="col-md-6 mx-auto">
+        {{ form_start(form) }}
         <div class="form-group"><h6>CREATION DE COMPTE CLIENT</h6></div>
         <div class="illustration"><i class="icon ion-ios-person-outline"></i></div>
 
