--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -6,6 +6,8 @@
 
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/login.css') }}">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.7.3/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="{{ asset('css/user_creer.css') }}">
 
 {% endblock %}
 
@@ -16,7 +18,7 @@
     </div>
 
     {{ form_start(form) }}
-    <div class="wrapper">
+    <div class="wrapper m-4">
         <form class="col-md-6 mx-auto">
 
             <div class="form-group"><h6>CREATION DE COMPTE CLIENT</h6></div>
@@ -35,9 +37,9 @@
             </div>
 
             <div class="form-group col-md-6">
-                {{ form_label(form.adresse, 'Adresse') }}
+                {{ form_label(form.code_postal, 'Code Postal') }}
                 <br/>
-                {{ form_widget(form.adresse) }}
+                {{ form_widget(form.code_postal) }}
             </div>
 
             <div class="form-group col-md-6">
@@ -47,9 +49,9 @@
             </div>
 
             <div class="form-group col-md-6">
-                {{ form_label(form.code_postal, 'Code Postal') }}
+                {{ form_label(form.adresse, 'Adresse') }}
                 <br/>
-                {{ form_widget(form.code_postal) }}
+                {{ form_widget(form.adresse) }}
             </div>
 
             <div class="form-group col-md-6">
@@ -80,5 +82,13 @@
     </div>
 
     {{ form_end(form) }}
+
+{% endblock %}
+
+{% block javascripts %}
+
+    {{ parent() }}
+
+    <script src="{{ asset('js/city_zip_autocomplete.js') }}"></script>
 
 {% endblock %}
