--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -201,7 +201,7 @@
                                                     <a class="nav-link" href="{{ path('home') }}">Les conférences</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="{{ path('app_account') }}">Nos livres</a>
+                                                    <a class="nav-link" href="{{ path('livre') }}">Nos livres</a>
                                                 </li>
                                                 <li class="nav-item">
                                                     <a class="nav-link" href="#">A propos de nous</a>
@@ -263,7 +263,7 @@
                     <div class="auto-container">
                         <div class="inner-container clearfix">
                             <div class="copyright-text">
-                                <p>© Copyright 2020-2021 Tous droits reservés <a href="#">Astronomy Conference</a></p>
+                                <p>© Copyright 2020-2021 Tous droits reservés <a href="/adminastro">Astronomy Conference</a></p>
                             </div>
                         </div>
                     </div>
